--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
-
+    <h3>fdfdfd</h3>
+    
     <script src="bundle.js" type="module"></script>
   </body>
 </html>
